@@ -24,7 +24,9 @@ position within a motif is represented as a row or a column in the file.}
 \item{alphabet}{\code{character(1)} One of \code{c('DNA', 'RNA', 'AA')},
 or a string of letters.}
 
-\item{sep}{\code{character(1)} Indicates how individual motifs are separated.}
+\item{sep}{\code{character(1)} Indicates how individual motifs are separated. Set as
+\code{NULL} if there are no seperating lines between motifs (the default is to
+assume a blank line).}
 
 \item{headers}{\code{logical(1)}, \code{character(1)} Indicating if and how to read names.}
 
